# practice

./: .gitignore  alembic.ini  main.py  pyproject.toml
src/core/: job_description.py
src/database/: database.py
src/models/: model.py
src/routers/: job_description.py
src/schemas/: schema.py
